<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/addwork">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addtitle"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/addtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/addtitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addstarttime"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/starttime_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/hour" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/hour"/>

        <EditText
            android:id="@+id/starttime_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/min" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/min_s" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addfinishtime"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/finishtime_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/hour" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/hour"/>

        <EditText
            android:id="@+id/finishtime_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/min" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/min_f" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addplace"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/addplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/addplace" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmemo"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/addmemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/addmemo" />

</LinearLayout>